@@ -104,6 +104,10 @@ int q_runner_dir(char *);
 struct host_q *host_q_lookup(const char *);
 struct host_q *host_q_create_or_lookup(char *);
 int            q_runner(void);
+int            fast_q_count(struct host_q *);
+int            fast_q_total(void);
+void           q_clear(struct host_q *);
+void           q_clear_all(void);
 void           queue_remove_envelope(struct envelope *);
 simta_result   queue_envelope(struct envelope *);
 int            q_single(struct host_q *);
